lint and license

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,10 +2,4 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-target/
-*~
-*.png
-*.env
-
-node_modules
-package-lock.json
+data/*.png filter=lfs diff=lfs merge=lfs -text
